--- a/src/common/W2Header/W2Header.css
+++ b/src/common/W2Header/W2Header.css
@@ -1,13 +1,20 @@
 .W2Header .logo {
-  width: 120px;
-  height: 31px;
-  background: #333;
-  border-radius: 6px;
-  margin: 16px 24px 16px 0;
+
+}
+
+.W2Header .logo .logo-title {
+  font-size: 20px;
+  font-weight: bold;
+  color: #49a9ee;
+  margin: 0 24px 0 0;
   float: left;
 }
 
 .W2Header .search {
   width: 200px;
+  float: left;
+}
+
+.W2Header .menu {
   float: right;
 }
